Change pion score for inclusive correlation calculation

--- a/classifier/correlations.ipynb
+++ b/classifier/correlations.ipynb
@@ -231,7 +231,7 @@
     "            for j in range(cor[ptype][layer].shape[1]):\n",
     "                cor[ptype][layer][i][j] = scipy.stats.pearsonr(\n",
     "                    cell_data[:,i,j],\n",
-    "                    cnn_scores[(plabels[pdata_merged.test]==pindex)[:,0]][:,0]\n",
+    "                    cnn_scores[(plabels[pdata_merged.test]==pindex)[:,0]][:,pindex]\n",
     "            )"
    ]
   },
@@ -1996,29 +1996,6 @@
     "            cbar.set_label('Pearson correlation', rotation=270, labelpad=20)\n",
     "            plt.savefig(plotpath+'cnncor_binned_'+ptype+'_'+layer+'_clusterE'+str(ibin)+'.pdf')\n",
     "            plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EMB1 (139971, 1, 128, 4)\n",
-      "EMB2 (139971, 1, 16, 16)\n",
-      "EMB3 (139971, 1, 8, 16)\n",
-      "TileBar0 (139971, 1, 4, 4)\n",
-      "TileBar1 (139971, 1, 4, 4)\n",
-      "TileBar2 (139971, 1, 2, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for layer in mu.cell_meta:\n",
-    "    print(layer, pcells_merged_reshaped[layer][pdata_merged.test].shape)"
    ]
   },
   {
