Add image size variation section

--- a/classifier/classifier-depth.ipynb
+++ b/classifier/classifier-depth.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "- [Simple test setup](#Simple-test-setup)\n",
-    "- [Experimentation](#Experimentation)"
+    "- [Experimentation](#Experimentation)\n",
+    "- [Image Size Variations](#Image-Size-Variations)"
    ]
   },
   {
@@ -696,14 +697,14 @@
     "        f_score[pdata_merged.test,1],\n",
     "        drop_intermediate=False,\n",
     "    )\n",
-    "    f_roc_auc = auc(f_roc_fpr, f_roc_tpr)\n",
+    "#     f_roc_auc = auc(f_roc_fpr, f_roc_tpr)\n",
     "    \n",
-    "    pu.roc_plot([f_roc_fpr], [f_roc_tpr],\n",
-    "            figfile=plotpath+filename+'_roc.pdf',\n",
-    "            labels=['area = {:.3f}'.format(f_roc_auc)],\n",
-    "            extra_lines=[[[0, 1], [0, 1]]],\n",
-    "            title=filename+' ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n",
-    "    return f_roc_auc"
+    "#     pu.roc_plot([f_roc_fpr], [f_roc_tpr],\n",
+    "#             figfile=plotpath+filename+'_roc.pdf',\n",
+    "#             labels=['area = {:.3f}'.format(f_roc_auc)],\n",
+    "#             extra_lines=[[[0, 1], [0, 1]]],\n",
+    "#             title=filename.replace('_','-')+' ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n",
+    "    return f_roc_fpr, f_roc_tpr"
    ]
   },
   {
@@ -713,6 +714,23 @@
    "outputs": [],
    "source": [
     "# models to test\n",
+    "def cnn_model_1x1():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "        x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
     "def cnn_model_1x1_no_maxpool():\n",
     "    with strategy.scope():\n",
     "        # Here come the 16x16 inputs\n",
@@ -745,6 +763,40 @@
     "        \n",
     "        # compile model\n",
     "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_no_dropmax():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "#         x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "#         x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_4pool():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = MaxPool2D(pool_size=(4, 4))(x)\n",
+    "        x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
     "        return model"
    ]
   },
@@ -755,13 +807,254 @@
    "outputs": [],
    "source": [
     "# test models\n",
-    "models = [cnn_model_1x1_no_maxpool(),cnn_model_1x1_no_dropout()]\n",
-    "fnames = ['no_maxpool','no_dropout']\n",
+    "models = [cnn_model_1x1(),\n",
+    "          cnn_model_1x1_no_maxpool(),\n",
+    "          cnn_model_1x1_no_dropout(),\n",
+    "          cnn_model_1x1_no_dropmax(),\n",
+    "          cnn_model_1x1_4pool(),\n",
+    "]\n",
+    "fnames = ['baseline','no_maxpool','no_dropout','no_dropmax','4pool']\n",
     "\n",
-    "\n",
+    "res_fpr = []\n",
+    "res_tpr = []\n",
+    "res_auc = []\n",
     "for m,n in zip(models,fnames):\n",
-    "    res = test_model(m,filename=n)\n",
-    "    print(n, res)"
+    "    fpr, tpr = test_model(m,filename=n)\n",
+    "    res_fpr.append(fpr)\n",
+    "    res_tpr.append(tpr)\n",
+    "    res_auc.append( auc(fpr, tpr) )\n",
+    "    \n",
+    "pu.roc_plot(res_fpr, res_tpr,\n",
+    "            figfile=plotpath+'1x1_roc.pdf',\n",
+    "            labels=['area({}) = {:.3f}'.format(label.replace('_','-'),auc) for label,auc in zip(fnames,res_auc)],\n",
+    "            extra_lines=[[[0, 1], [0, 1]]],\n",
+    "            title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# models to test\n",
+    "def cnn_model_1x1():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "        x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_ndm_d128only():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "#         x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "#         x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "#         x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_ndm_d64only():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "#         x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "#         x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "#         x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_ndm_direct():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "#         x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "#         x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "#         x = Dense(128, activation='relu')(x)\n",
+    "#         x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test models\n",
+    "models = [cnn_model_1x1(),\n",
+    "          cnn_model_1x1_ndm_d128only(),\n",
+    "          cnn_model_1x1_ndm_d64only(),\n",
+    "          cnn_model_1x1_ndm_direct(),\n",
+    "]\n",
+    "fnames = ['baseline','dense128_only','dense64_only','no_dense']\n",
+    "\n",
+    "res_fpr = []\n",
+    "res_tpr = []\n",
+    "res_auc = []\n",
+    "for m,n in zip(models,fnames):\n",
+    "    fpr, tpr = test_model(m,filename=n)\n",
+    "    res_fpr.append(fpr)\n",
+    "    res_tpr.append(tpr)\n",
+    "    res_auc.append( auc(fpr, tpr) )\n",
+    "    \n",
+    "pu.roc_plot(res_fpr, res_tpr,\n",
+    "            figfile=plotpath+'1x1_ndm_roc.pdf',\n",
+    "            labels=['area({}) = {:.3f}'.format(label.replace('_','-'),auc) for label,auc in zip(fnames,res_auc)],\n",
+    "            extra_lines=[[[0, 1], [0, 1]]],\n",
+    "            title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image Size Variations\n",
+    "<div style=\"text-align: right\"> <a href=\"#1x1-Convolutions\">Top</a> </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model_size(model,filename='',\n",
+    "               im_size=(16,16),epochs=100):\n",
+    "    '''\n",
+    "    Convenience function for training and calculating\n",
+    "    the area-under-curve for a model.\n",
+    "    This version handles testing different image sizes\n",
+    "    '''\n",
+    "    # generate resized images\n",
+    "    pcells_resized = mu.setupChannelImages(mu.rescaleImages(pcells_merged, im_size))\n",
+    "    \n",
+    "    # train model\n",
+    "    f_history = model.fit(pcells_resized[pdata_merged.train],\n",
+    "                        plabels[pdata_merged.train], \n",
+    "                        validation_data=(pcells_resized[pdata_merged.val], plabels[pdata_merged.val]),\n",
+    "                        epochs=100, batch_size=200*ngpu, verbose=2)\n",
+    "    f_history = f_history.history\n",
+    "    \n",
+    "    # save trained weights and history\n",
+    "    if(filename != ''):\n",
+    "        model.save(modelpath+filename+\".h5\")\n",
+    "        with open(modelpath+filename +\".history\",'wb') as model_history_file:\n",
+    "            pickle.dump(f_history, model_history_file)\n",
+    "            \n",
+    "    # get network scores for the dataset\n",
+    "    f_score = model.predict(\n",
+    "        pcells_resized\n",
+    "    )\n",
+    "    \n",
+    "    # calculate roc and auc\n",
+    "    f_roc_fpr, f_roc_tpr, f_roc_thresh = roc_curve(\n",
+    "        plabels[pdata_merged.test][:,1],\n",
+    "        f_score[pdata_merged.test,1],\n",
+    "        drop_intermediate=False,\n",
+    "    )\n",
+    "#     f_roc_auc = auc(f_roc_fpr, f_roc_tpr)\n",
+    "    \n",
+    "#     pu.roc_plot([f_roc_fpr], [f_roc_tpr],\n",
+    "#             figfile=plotpath+filename+'_roc.pdf',\n",
+    "#             labels=['area = {:.3f}'.format(f_roc_auc)],\n",
+    "#             extra_lines=[[[0, 1], [0, 1]]],\n",
+    "#             title=filename.replace('_','-')+' ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n",
+    "    return f_roc_fpr, f_roc_tpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# models to test\n",
+    "def cnn_model_1x1():\n",
+    "    with strategy.scope():\n",
+    "        # Here come the 16x16 inputs\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_size(im_size):\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(6, im_size, im_size), name='input1')\n",
+    "        x = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test models\n",
+    "test_shapes = [8,12,16,20,24,28,32]\n",
+    "models = [ cnn_model_1x1_size(sz) for sz in test_shapes]\n",
+    "\n",
+    "res_fpr = []\n",
+    "res_tpr = []\n",
+    "res_auc = []\n",
+    "for m,sz in zip(models,test_shapes):\n",
+    "    fname = 'ndm_d64_s'+str(sz)\n",
+    "    fpr, tpr = test_model_size(m,filename=fname,im_size=(sz,sz))\n",
+    "    res_fpr.append(fpr)\n",
+    "    res_tpr.append(tpr)\n",
+    "    res_auc.append( auc(fpr, tpr) )\n",
+    "    \n",
+    "pu.roc_plot(res_fpr, res_tpr,\n",
+    "            figfile=plotpath+'1x1_ndm_d64_s_roc.pdf',\n",
+    "            labels=['area('+str(sz)+'x'+str(sz)+') = {:.3f}'.format(auc) for sz,auc in zip(test_shapes,res_auc)],\n",
+    "            extra_lines=[[[0, 1], [0, 1]]],\n",
+    "            title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n"
    ]
   }
  ],
