Add integration studies

--- a/classifier/classifier-depth.ipynb
+++ b/classifier/classifier-depth.ipynb
@@ -14,7 +14,8 @@
     "- [Simple test setup](#Simple-test-setup)\n",
     "- [Experimentation](#Experimentation)\n",
     "- [Image Size Variations](#Image-Size-Variations)\n",
-    "- [Input Layer Subsets](#Input-Layer-Subsets)"
+    "- [Input Layer Subsets](#Input-Layer-Subsets)\n",
+    "- [Incorporation](#Incorporation)"
    ]
   },
   {
@@ -679,7 +680,7 @@
     "    f_history = model.fit(pcells_EMB2_channels[pdata_merged.train],\n",
     "                        plabels[pdata_merged.train], \n",
     "                        validation_data=(pcells_EMB2_channels[pdata_merged.val], plabels[pdata_merged.val]),\n",
-    "                        epochs=100, batch_size=200*ngpu, verbose=2)\n",
+    "                        epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
     "    f_history = f_history.history\n",
     "    \n",
     "    # save trained weights and history\n",
@@ -972,7 +973,7 @@
     "        f_history = model.fit(pcells_resized[pdata_merged.train],\n",
     "                            plabels[pdata_merged.train], \n",
     "                            validation_data=(pcells_resized[pdata_merged.val], plabels[pdata_merged.val]),\n",
-    "                            epochs=100, batch_size=200*ngpu, verbose=2)\n",
+    "                            epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
     "        f_history = f_history.history\n",
     "\n",
     "        # save trained weights and history\n",
@@ -1096,7 +1097,7 @@
     "        f_history = model.fit(subset[pdata_merged.train],\n",
     "                            plabels[pdata_merged.train], \n",
     "                            validation_data=(subset[pdata_merged.val], plabels[pdata_merged.val]),\n",
-    "                            epochs=100, batch_size=200*ngpu, verbose=2)\n",
+    "                            epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
     "        f_history = f_history.history\n",
     "\n",
     "        # save trained weights and history\n",
@@ -1437,11 +1438,288 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Incorporation\n",
+    "<div style=\"text-align: right\"> <a href=\"#1x1-Convolutions\">Top</a> </div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def test_model_incorporated(model,filename='',\n",
+    "               epochs=100):\n",
+    "    '''\n",
+    "    Convenience function for training and calculating\n",
+    "    the area-under-curve for a model.\n",
+    "    '''\n",
+    "    \n",
+    "    # check if model has been trained already\n",
+    "    if Path(modelpath+filename+'.h5').is_file():\n",
+    "        # load model\n",
+    "        model = tf.keras.models.load_model(modelpath+filename+\".h5\")\n",
+    "    else:\n",
+    "        # train model\n",
+    "        f_history = model.fit([pcells_EMB2_channels[pdata_merged.train], \n",
+    "                               pcells_EMB1_flat[pdata_merged.train]],\n",
+    "                            plabels[pdata_merged.train], \n",
+    "                            validation_data=([pcells_EMB2_channels[pdata_merged.val],\n",
+    "                                              pcells_EMB1_flat[pdata_merged.val]],\n",
+    "                                             plabels[pdata_merged.val]),\n",
+    "                            epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
+    "        f_history = f_history.history\n",
+    "\n",
+    "        # save trained weights and history\n",
+    "        if(filename != ''):\n",
+    "            model.save(modelpath+filename+\".h5\")\n",
+    "            with open(modelpath+filename +\".history\",'wb') as model_history_file:\n",
+    "                pickle.dump(f_history, model_history_file)\n",
+    "            \n",
+    "    # get network scores for the dataset\n",
+    "    f_score = model.predict(\n",
+    "        [pcells_EMB2_channels, pcells_EMB1_flat]\n",
+    "    )\n",
+    "    \n",
+    "    # calculate roc and auc\n",
+    "    f_roc_fpr, f_roc_tpr, f_roc_thresh = roc_curve(\n",
+    "        plabels[pdata_merged.test][:,1],\n",
+    "        f_score[pdata_merged.test,1],\n",
+    "        drop_intermediate=False,\n",
+    "    )\n",
+    "    f_roc_auc = auc(f_roc_fpr, f_roc_tpr)\n",
+    "    \n",
+    "    pu.roc_plot([f_roc_fpr], [f_roc_tpr],\n",
+    "            figfile=plotpath+filename+'_roc.pdf',\n",
+    "            labels=['area = {:.3f}'.format(f_roc_auc)],\n",
+    "            extra_lines=[[[0, 1], [0, 1]]],\n",
+    "            title=filename.replace('_','-')+' ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n",
+    "    return f_roc_fpr, f_roc_tpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnn_model_1x1_incorporated():\n",
+    "    # original network: channels_EMB2G_EMB1F_model_all4\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "\n",
+    "        # baseline layers\n",
+    "        x1 = Convolution2D(32, (4, 4), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x1 = MaxPool2D(pool_size=(2, 2))(x1)\n",
+    "        x1 = Convolution2D(32, (2, 2), activation='relu')(x1)\n",
+    "        x1 = MaxPool2D(pool_size=(2, 2))(x1)\n",
+    "        x1 = Flatten()(x1)\n",
+    "        x1 = Dense(128, activation='relu')(x1)\n",
+    "        x1 = Dropout(0.2)(x1)\n",
+    "        x1 = Dense(64, activation='relu')(x1)\n",
+    "\n",
+    "        x1_2 = Convolution2D(64, (2, 2), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x1_2 = MaxPool2D(pool_size=(2, 2))(x1_2)\n",
+    "        x1_2 = Convolution2D(32, (2, 2), activation='relu')(x1_2)\n",
+    "        x1_2 = MaxPool2D(pool_size=(2, 2))(x1_2)\n",
+    "        x1_2 = Flatten()(x1_2)\n",
+    "        x1_2 = Dense(128, activation='relu')(x1_2)\n",
+    "        x1_2 = Dropout(0.2)(x1_2)\n",
+    "        x1_2 = Dense(64, activation='relu')(x1_2)\n",
+    "        \n",
+    "        # 1x1 convolution layers\n",
+    "        depth = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        depth = Flatten()(depth)\n",
+    "        depth = Dense(64, activation='relu')(depth)\n",
+    "\n",
+    "        emb1_dim = 128*4\n",
+    "        #Here's EMB1 flattened\n",
+    "        input2 = Input(shape=(emb1_dim), name='input2')\n",
+    "        x2 = Dense(emb1_dim, activation='relu')(input2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 2, activation='relu')(x2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 4, activation='relu')(x2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 8, activation='relu')(x2)\n",
+    "\n",
+    "        # concatenate outputs from the two networks above\n",
+    "        x = concatenate([x1, x1_2, x2, depth]) \n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dropout(0.2)(x)    \n",
+    "        x = Dense(64, activation='relu')(x)  \n",
+    "\n",
+    "        # final output\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "\n",
+    "        model = Model(inputs = [input1,input2], outputs = [output])\n",
+    "    \n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])    \n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_incorporated2():\n",
+    "    # original network: channels_EMB2G_EMB1F_model_all4\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "\n",
+    "        # baseline layers\n",
+    "        x1 = Convolution2D(32, (4, 4), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x1 = MaxPool2D(pool_size=(2, 2))(x1)\n",
+    "        x1 = Convolution2D(32, (2, 2), activation='relu')(x1)\n",
+    "        x1 = MaxPool2D(pool_size=(2, 2))(x1)\n",
+    "        x1 = Flatten()(x1)\n",
+    "        x1 = Dense(128, activation='relu')(x1)\n",
+    "        x1 = Dropout(0.2)(x1)\n",
+    "        x1 = Dense(64, activation='relu')(x1)\n",
+    "\n",
+    "        x1_2 = Convolution2D(64, (2, 2), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x1_2 = MaxPool2D(pool_size=(2, 2))(x1_2)\n",
+    "        x1_2 = Convolution2D(32, (2, 2), activation='relu')(x1_2)\n",
+    "        x1_2 = MaxPool2D(pool_size=(2, 2))(x1_2)\n",
+    "        x1_2 = Flatten()(x1_2)\n",
+    "        x1_2 = Dense(128, activation='relu')(x1_2)\n",
+    "        x1_2 = Dropout(0.2)(x1_2)\n",
+    "        x1_2 = Dense(64, activation='relu')(x1_2)\n",
+    "        \n",
+    "        # 1x1 convolution layers\n",
+    "        depth = Convolution2D(32, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        depth = Flatten()(depth)\n",
+    "        depth = Dense(64, activation='relu')(depth)\n",
+    "\n",
+    "        emb1_dim = 128*4\n",
+    "        #Here's EMB1 flattened\n",
+    "        input2 = Input(shape=(emb1_dim), name='input2')\n",
+    "        x2 = Dense(emb1_dim, activation='relu')(input2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 2, activation='relu')(x2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 4, activation='relu')(x2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 8, activation='relu')(x2)\n",
+    "\n",
+    "        # concatenate outputs from the two networks above\n",
+    "        x = concatenate([x1, x1_2, depth, x2]) \n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dropout(0.2)(x)    \n",
+    "        x = Dense(64, activation='relu')(x)  \n",
+    "\n",
+    "        # final output\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "\n",
+    "        model = Model(inputs = [input1,input2], outputs = [output])\n",
+    "    \n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])    \n",
+    "        return model\n",
+    "    \n",
+    "def cnn_model_1x1_incorporated3():\n",
+    "    # original network: channels_EMB2G_EMB1F_model_all4\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "\n",
+    "        # baseline layers\n",
+    "        x1 = Convolution2D(32, (4, 4), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x1 = MaxPool2D(pool_size=(2, 2))(x1)\n",
+    "        x1 = Convolution2D(32, (2, 2), activation='relu')(x1)\n",
+    "        x1 = MaxPool2D(pool_size=(2, 2))(x1)\n",
+    "        x1 = Flatten()(x1)\n",
+    "        x1 = Dense(128, activation='relu')(x1)\n",
+    "        x1 = Dropout(0.2)(x1)\n",
+    "        x1 = Dense(64, activation='relu')(x1)\n",
+    "\n",
+    "        x1_2 = Convolution2D(64, (2, 2), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x1_2 = MaxPool2D(pool_size=(2, 2))(x1_2)\n",
+    "        x1_2 = Convolution2D(32, (2, 2), activation='relu')(x1_2)\n",
+    "        x1_2 = MaxPool2D(pool_size=(2, 2))(x1_2)\n",
+    "        x1_2 = Flatten()(x1_2)\n",
+    "        x1_2 = Dense(128, activation='relu')(x1_2)\n",
+    "        x1_2 = Dropout(0.2)(x1_2)\n",
+    "        x1_2 = Dense(64, activation='relu')(x1_2)\n",
+    "        \n",
+    "        # 1x1 convolution layers\n",
+    "        depth = Convolution2D(64, (1, 1), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        depth = Flatten()(depth)\n",
+    "        depth = Dense(64, activation='relu')(depth)\n",
+    "\n",
+    "        emb1_dim = 128*4\n",
+    "        #Here's EMB1 flattened\n",
+    "        input2 = Input(shape=(emb1_dim), name='input2')\n",
+    "        x2 = Dense(emb1_dim, activation='relu')(input2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 2, activation='relu')(x2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 4, activation='relu')(x2)\n",
+    "        x2 = Dropout(0.2)(x2)\n",
+    "        x2 = Dense(emb1_dim / 8, activation='relu')(x2)\n",
+    "\n",
+    "        # concatenate outputs from the two networks above\n",
+    "        x = concatenate([x1, x1_2, x2, depth]) \n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dropout(0.2)(x)    \n",
+    "        x = Dense(64, activation='relu')(x)  \n",
+    "\n",
+    "        # final output\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "\n",
+    "        model = Model(inputs = [input1,input2], outputs = [output])\n",
+    "    \n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])    \n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcells_EMB1_flat = pcells_merged['EMB1'].reshape(len(pcells_merged['EMB1']), 128 * 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test model\n",
+    "test_model_incorporated(cnn_model_1x1_incorporated(),\n",
+    "                        filename='1x1_incorporated')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model_incorporated(cnn_model_1x1_incorporated2(),\n",
+    "                        filename='1x1_incorporated2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model_incorporated(cnn_model_1x1_incorporated(),\n",
+    "                        filename='1x1_incorporated_250',\n",
+    "                        epochs=250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model_incorporated(cnn_model_1x1_incorporated3(),\n",
+    "                        filename='1x1_incorporated3_250',\n",
+    "                        epochs=250)"
+   ]
   }
  ],
  "metadata": {
