Add section on 3d convolutions

--- a/classifier/cnn-variations.ipynb
+++ b/classifier/cnn-variations.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [2D Convolutions](#2D-Convolutions)"
+    "- [2D Convolutions](#2D-Convolutions)\n",
+    "- [3D Convolutions](#3D-Convolutions)\n",
+    "- [Performance vs Dataset Size](#Performance-vs-Dataset-Size)"
    ]
   },
   {
@@ -97,7 +99,9 @@
     "from tensorflow.keras.layers import Dropout\n",
     "from tensorflow.keras.layers import Flatten\n",
     "from tensorflow.keras.layers import Convolution2D\n",
+    "from tensorflow.keras.layers import Convolution3D\n",
     "from tensorflow.keras.layers import MaxPool2D\n",
+    "from tensorflow.keras.layers import MaxPool3D\n",
     "from tensorflow.keras.layers import Input\n",
     "from tensorflow.keras.layers import concatenate\n",
     "from tensorflow.keras.layers import BatchNormalization\n",
@@ -240,10 +244,189 @@
     "    \n",
     "pu.roc_plot(res_fpr, res_tpr,\n",
     "            figfile=plotpath+'nxn_roc.pdf',\n",
-    "            labels=['area({}) = {:.3f}'.format(str(i)+'x'+str(i),auc) for auc in res_auc],\n",
+    "            labels=['area({}) = {:.3f}'.format(str(i+1)+'x'+str(i+1),auc) for i,auc in enumerate(res_auc)],\n",
     "            extra_lines=[[[0, 1], [0, 1]]],\n",
     "            title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3D Convolutions\n",
+    "<div style=\"text-align: right\"> <a href=\"#CNN-Variations\">Top</a> </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnn_model_3d():\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(1, 6, 16, 16), name='input1')\n",
+    "        x = Convolution3D(32, (2,2,2), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = MaxPool3D(pool_size=(2, 2, 2))(x)\n",
+    "        x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = cnn_model_3d()\n",
+    "history = model.fit(np.expand_dims(pcells_EMB2_channels[pdata_merged.train],axis=1),\n",
+    "                    plabels[pdata_merged.train], \n",
+    "                    validation_data=(np.expand_dims(pcells_EMB2_channels[pdata_merged.val],axis=1),\n",
+    "                    plabels[pdata_merged.val]),\n",
+    "                    epochs=100, batch_size=200*ngpu, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = model.predict(\n",
+    "    np.expand_dims(pcells_EMB2_channels,axis=1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roc_fpr, roc_tpr, roc_thresh = roc_curve(\n",
+    "    plabels[pdata_merged.test][:,1],\n",
+    "    scores[pdata_merged.test,1],\n",
+    "    drop_intermediate=False,\n",
+    ")\n",
+    "roc_auc = auc(roc_fpr, roc_tpr)\n",
+    "pu.roc_plot([roc_fpr], [roc_tpr],\n",
+    "    figfile=plotpath+'conv3d_roc.pdf',\n",
+    "    labels=['area(conv3d) = {:.3f}'.format(roc_auc)],\n",
+    "    extra_lines=[[[0, 1], [0, 1]]],\n",
+    "    title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnn_model_3d_depth(n):\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(1, 6, 16, 16), name='input1')\n",
+    "        x = Convolution3D(32, (n,2,2), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = MaxPool3D(pool_size=(2, 2, 2))(x)\n",
+    "        x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depths = [3,4]\n",
+    "model_depth = [cnn_model_3d_depth(n) for n in depths]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d,m in zip(depths,model_depth):\n",
+    "    history = m.fit(np.expand_dims(pcells_EMB2_channels[pdata_merged.train],axis=1),\n",
+    "                    plabels[pdata_merged.train], \n",
+    "                    validation_data=(np.expand_dims(pcells_EMB2_channels[pdata_merged.val],axis=1),\n",
+    "                    plabels[pdata_merged.val]),\n",
+    "                    epochs=100, batch_size=200*ngpu, verbose=2)\n",
+    "    m.save(modelpath+\"conv3d_depth_\"+str(d)+\".h5\")\n",
+    "    with open(modelpath+\"conv3d_depth_\"+str(d)+\".history\",'wb') as model_history_file:\n",
+    "        pickle.dump(history.history, model_history_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depth_scores = []\n",
+    "for m in model_depth:\n",
+    "    depth_scores.append(m.predict(\n",
+    "        np.expand_dims(pcells_EMB2_channels,axis=1)\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depth_fpr = []\n",
+    "depth_tpr = []\n",
+    "depth_auc = []\n",
+    "for s in depth_scores:\n",
+    "    roc_fpr, roc_tpr, roc_thresh = roc_curve(\n",
+    "        plabels[pdata_merged.test][:,1],\n",
+    "        s[pdata_merged.test,1],\n",
+    "        drop_intermediate=False,\n",
+    "    )\n",
+    "    depth_fpr.append(roc_fpr)\n",
+    "    depth_tpr.append(roc_tpr)\n",
+    "    depth_auc.append(auc(roc_fpr, roc_tpr))\n",
+    "\n",
+    "pu.roc_plot(depth_fpr, depth_tpr,\n",
+    "    figfile=plotpath+'conv3d_depth_roc.pdf',\n",
+    "    labels=['area({}x2x2) = {:.3f}'.format(str(d),auc) for d,auc in zip(depths,depth_auc)],\n",
+    "    extra_lines=[[[0, 1], [0, 1]]],\n",
+    "    title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performance vs Dataset Size\n",
+    "<div style=\"text-align: right\"> <a href=\"#CNN-Variations\">Top</a> </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
